# tailyew-starter

./: .gitignore  Cargo.toml  Makefile  README.md  main.css  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js
src/: lib.rs
src/pages/: app_router.rs  landing_page.rs  mod.rs  not_found_page.rs
src/templates/: mod.rs  nav_bar.rs
static/: index.html  manifest.json  service_worker.js  tailyew-safelist.html
