# Cargo.toml

[package]
name = "create-tailyew-app"
version = "0.1.0"
edition = "2021"
description = "TailYew frontend app using the tailyew component system"
license = "MIT OR Apache-2.0"

[lib]
# Needed for wasm-pack or trunk builds
crate-type = ["cdylib"]

[dependencies]
tailyew = "0.1.15"

serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
yew-router = "0.18.0"
yew = { version = "0.21", features = ["csr", "ssr"] }
gloo = "0.11.0"
web-sys = { version = "0.3.69", features = [
  "console",
  "HtmlFormElement",
  "HtmlInputElement",
  "HtmlSelectElement",
  "HtmlDocument",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "Clipboard",       
]}

wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"

